--- a/chapter3.tex
+++ b/chapter3.tex
@@ -96,7 +96,7 @@ In this section, we outline the components of our system and describe how proven
 The goal is to create a provenance\-aware system which records I/O operations on data for devices connected in an IoT system. For our implementation, several tools and hardware components are utilized in the development of our prototype, some of the tools utilized are outlined below:
 
 \begin{itemize}
-\item BeagleBone Black Board. This device is a microcontroller used to evaluate our approach. We choose the BeagleBone Board because it is a representation of what can be found on an IoT gateway device and it has the capability to include custom hardware in programmable logic. Also, BeagleBone is a low­cost, simple IoT demonstrator that was chosen for its high­ performance, on­board emulation, and IoT gateway projects can be programmed without additional need for hardware tools.
+\item BeagleBone Black Board. This device is a microcontroller used to evaluate our approach. We choose the BeagleBone Board because it is a representation of what can be found on an IoT gateway device and it has the capability to include custom hardware in programmable logic. Also, BeagleBone is a low­ cost, simple IoT demonstrator that was chosen for its high­ performance, on­board emulation, and IoT gateway projects can be programmed without additional need for hardware tools.
 
 %\item Real Time Executive for Multiprocessor Systems (RTEMS) is an open source real­time operating system (RTOS) for embedded systems. This operating system is a typical RTOS that may be deployed in IoT devices.
 
@@ -109,7 +109,7 @@ The goal is to create a provenance\-aware system which records I/O operations on
 
 \section{Experiment Evaluation}
 
-I plan to evaluate the effectiveness of our approach for the provenance collection framework by implementing an intrusion detection system for IoT device. An IDS is used to detect malicious attacks based on a certain policy or threshold set by an administrator. There are two types of  IDS: Rule-based approach, or anomaly based approach. The rule based approach allows for intrusion monitoring based on rules specified by an administrator. On the other hand, anomaly based IDS which monitors intrusion based on patterns that falls out of the normal system function. Most anomaly\-based approach deals with machine learning to classify normal or anomalous behavior. Provenance collection IDS system uses provenance data to provide intrusion detection capabilities in the IoT framework. It follows a rule based approach in which when provenance  I plan to test the throughput and precision recall on the detection rate. We will evaluate ur provenance collection system using the work of Xie et al. Xie et al proposes an intrusion detection system which uses system level provenance data to provide vulnerability intrusion detection. The system collects provenance, detects intrusion and analyzes vulnerabilities that exists based on provenance data.  
+I plan to evaluate the effectiveness of our approach for the provenance collection framework by implementing an intrusion detection system for IoT device. An IDS is used to detect malicious attacks based on a certain policy or threshold set by an administrator. There are two types of  IDS: Rule-based approach, or anomaly based approach. The rule based approach allows for intrusion monitoring based on rules specified by an administrator. On the other hand, anomaly based IDS which monitors intrusion based on patterns that falls out of the normal system function. Most anomaly\-based approach deals with machine learning to classify normal or anomalous behavior. Provenance collection IDS system uses provenance data to provide intrusion detection capabilities in the IoT framework. It follows a rule based approach in which when provenance  I plan to test the throughput and precision recall on the detection rate. We will evaluate ur provenance collection system using the work of Xie et al \cite{Xie:2016:UID:2936026.2936232}. Xie et al proposes an intrusion detection system which uses system level provenance data to provide vulnerability intrusion detection. The system collects provenance, detects intrusion and analyzes vulnerabilities that exists based on provenance data.  n
 
 
 %\section{Provenance Aware IDS System for IoT }
