--- a/refrences.bib
+++ b/refrences.bib
@@ -26,7 +26,8 @@
 	title = {{PROV}-{DM}: {The} {PROV} {Data} {Model}},
 	url = {https://www.w3.org/TR/prov-dm/},
 	urldate = {2016-09-15},
-	file = {PROV-DM\: The PROV Data Model:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/WPH6IJXZ/prov-dm.html:text/html}
+	file = {PROV-DM\: The PROV Data Model:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/WPH6IJXZ/prov-dm.html:text/html},
+	howpublished = "\url{https://www.w3.org/TR/prov-dm/}"
 }
 
 @inproceedings{park_provenance-based_2012,
@@ -268,7 +269,9 @@ on root volumes, especially during early boot. In this paper we describe an appr
 	title = {{eXtensible} {Access} {Control} {Markup} {Language} ({XACML}) {Version} 3.0},
 	url = {http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html},
 	urldate = {2016-09-18},
-	file = {eXtensible Access Control Markup Language (XACML) Version 3.0:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/E4SCC524/xacml-3.0-core-spec-os-en.html:text/html}
+	file = {eXtensible Access Control Markup Language (XACML) Version 3.0:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/E4SCC524/xacml-3.0-core-spec-os-en.html:text/html},
+	
+	howpublished = "\url{http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html}"
 }
 
 @article{gubbi_internet_2013,
@@ -474,5 +477,23 @@ on root volumes, especially during early boot. In this paper we describe an appr
  publisher = {Elsevier Science Publishers B. V.},
  address = {Amsterdam, The Netherlands, The Netherlands},
  keywords = {False alarm, Forensic analysis, Intrusion detection, Provenance},
+} 
+
+@inproceedings{King:2003:BI:945445.945467,
+ author = {King, Samuel T. and Chen, Peter M.},
+ title = {Backtracking Intrusions},
+ booktitle = {Proceedings of the Nineteenth ACM Symposium on Operating Systems Principles},
+ series = {SOSP '03},
+ year = {2003},
+ isbn = {1-58113-757-5},
+ location = {Bolton Landing, NY, USA},
+ pages = {223--236},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/945445.945467},
+ doi = {10.1145/945445.945467},
+ acmid = {945467},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computer forensics, information flow, intrusion analysis},
 } 
 
