--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,7 @@
 \usepackage{utepcsthesis}
 \usepackage{graphics}
 \usepackage {tikz}
+\usepackage{url}
 \usetikzlibrary {positioning}
 \usepackage{titlesec}
 %\usepackage{biblatex}
