--- a/chapter4.tex
+++ b/chapter4.tex
@@ -23,7 +23,7 @@ In this chapter we define our model and algorithms for storage optimization of p
 %\end{definition}
 
 
-\section{Policy Based Role-Based Access Control Approach}
+\section{A Policy-Based Data Pruning Approach}
 \par We envision large amounts of provenance data will be generated from our provenance collection framework. Due to the memory constraints on devices at the sensor and device layer of the IoT architecture, there is a need to create for an efficient storage of provenance data. To address this issue, we define a policy driven framework that provides a policy scheme for the enforcement of provenance storage. Policy approach allows for the flexibility of provenance selection. A policy approach makes selecting what provenance is considered important to a specific IoT architecture. Since various organizations have varied provenance requirement, making provenance requirement static might not work across all IoT architecture. The policy framework contains a policy document which contains information on the provenance data that are permitted  to be collected. A policy framework is used to address the  resource constraint problems encountered when storing large amounts of provenance data on low memory devices. Policy document is created by the user who serves as an administrator.  An administrator is a user which has the right to add, delete or modify the policy document. For implementation, there are several policy models can be utilized to integrate a policy model  with the IoT framework. To implement a policy based framework, We propose to use the eXtensible Markup Language(XACML) policy model \cite{xacml} to to generate and enforce provenance policy for our IoT framework.
 
 
