--- a/refrences.bib
+++ b/refrences.bib
@@ -61,7 +61,10 @@
 	url = {https://www.usenix.org/conference/tapp12/workshop-program/presentation/macko},
 	urldate = {2016-09-15},
 	year = {2012},
-	file = {Full Text PDF:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/GXEPA4VM/2012 - A General-Purpose Provenance Library.pdf:application/pdf;Snapshot:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/EDAXEQDA/macko.html:text/html}
+	file = {Full Text PDF:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/GXEPA4VM/2012 - A General-Purpose Provenance Library.pdf:application/pdf;Snapshot:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/EDAXEQDA/macko.html:text/html},
+	
+	howpublished = "\url{https://www.usenix.org/conference/tapp12/workshop-program/presentation/macko}"
+	
 }
 
 @article{seltzer_collecting_2011,
